--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -16,9 +16,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.token }}
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
-        run: |
-          git config lpaead github-actions
-          git config lpaead@github.com github-actions@github.com
+        run: 
+          git config user.name lpaead
+          git config user.email lpaead@users.noreply.github.com
           git add -A .
           git commit -m "generated"
           git push
